[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/status_effects/BurningStatus.gd" type="Script" id=1]
[ext_resource path="res://assets/particles/flame_particle.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19.875, 22.5812 )

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 2
emission_box_extents = Vector3( 10, 15, 1 )
flag_disable_z = true
gravity = Vector3( 0, -80, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="BurningStatus" type="Area2D" groups=["Fireball"]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -0.0876465 )
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="DamageTickTimer" type="Timer" parent="."]
wait_time = 0.35

[node name="BurningParticles" type="Particles2D" parent="."]
scale = Vector2( 2.5, 2.5 )
amount = 10
lifetime = 0.75
process_material = SubResource( 2 )
texture = ExtResource( 3 )

[node name="DestroyedTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="area_entered" from="." to="." method="_on_BurningStatus_area_entered"]
[connection signal="timeout" from="DamageTickTimer" to="." method="_on_DamageTickTimer_timeout"]
[connection signal="timeout" from="DestroyedTimer" to="." method="_on_DestroyedTimer_timeout"]
